--- a/assets/custom-vars.scss
+++ b/assets/custom-vars.scss
@@ -2,3 +2,14 @@
 
 $white: #fff;
 $black: #000;
+
+@font-face {
+  font-family: 'Maledpan';
+  src: url('../static/webfonts/maledpan-regular-webfont.eot');
+  src: url('../static/webfonts/maledpan-regular-webfont.eot?#iefix') format('embedded-opentype'),
+       url('../static/webfonts/maledpan-regular-webfont.woff2') format('woff2'),
+       url('../static/webfonts/maledpan-regular-webfont.woff') format('woff'),
+       url('../static/webfonts/maledpan-regular-webfont.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
